[package]
name = "nocturnal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
mongodb = "2.6.0"
rand = "0.8.5"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.183"
thiserror = "1.0.44"
tokio = "1.30.0"
